Refactored into a different strucuture for SNP and added all available SNP settings from libvirt
Signed-off-by: Alan Caldelas <ajcaldelas@gmail.com>

--- a/staging/src/kubevirt.io/api/apitesting/testdata/HEAD/kubevirt.io.v1.VirtualMachineInstance.yaml
+++ b/staging/src/kubevirt.io/api/apitesting/testdata/HEAD/kubevirt.io.v1.VirtualMachineInstance.yaml
@@ -418,8 +418,16 @@ spec:
         dhCert: dhCertValue
         policy:
           encryptedState: true
-          secureNestedPaging: true
         session: sessionValue
+      snp:
+        authorKey: true
+        guestVisibleWorkarounds: guestVisibleWorkaroundsValue
+        hostData: hostDataValue
+        idAuth: idAuthValue
+        idBlock: idBlockValue
+        kernelHashes: true
+        policy: policyValue
+        vcek: true
     machine:
       type: typeValue
     memory:
