--- a/staging/src/kubevirt.io/api/apitesting/testdata/HEAD/kubevirt.io.v1.VirtualMachine.yaml
+++ b/staging/src/kubevirt.io/api/apitesting/testdata/HEAD/kubevirt.io.v1.VirtualMachine.yaml
@@ -611,8 +611,16 @@ spec:
             dhCert: dhCertValue
             policy:
               encryptedState: true
-              secureNestedPaging: true
             session: sessionValue
+          snp:
+            authorKey: true
+            guestVisibleWorkarounds: guestVisibleWorkaroundsValue
+            hostData: hostDataValue
+            idAuth: idAuthValue
+            idBlock: idBlockValue
+            kernelHashes: true
+            policy: policyValue
+            vcek: true
         machine:
           type: typeValue
         memory:
